[gd_scene load_steps=2 format=3 uid="uid://8d015nfkvlpe"]

[ext_resource type="Script" uid="uid://cyfsgfe2m7hux" path="res://addons/zylann.translation_editor/tools/language_selection_dialog.gd" id="1"]

[node name="LanguageSelectionDialog" type="AcceptDialog"]
size = Vector2i(111, 148)
visible = true
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[node name="FilterEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="LanguagesList" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2
hide_root = true
select_mode = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2

[connection signal="text_changed" from="VBoxContainer/FilterEdit" to="." method="_on_FilterEdit_text_changed"]
[connection signal="item_activated" from="VBoxContainer/LanguagesList" to="." method="_on_LanguagesList_item_activated"]
[connection signal="item_selected" from="VBoxContainer/LanguagesList" to="." method="_on_LanguagesList_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/LanguagesList" to="." method="_on_LanguagesList_nothing_selected"]
